--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  overflow: hidden;
   grid-column: full-start/ col-end 6;
 
   background-image: linear-gradient(
@@ -23,6 +24,10 @@
   }
   @media only screen and(max-width:$bp-sm) {
     padding: 5rem;
+  }
+
+  .heading-1 > span {
+    display: block;
   }
 
   &__logo {
