--- a/up/css/style.css
+++ b/up/css/style.css
@@ -38,8 +38,7 @@ body {
   font-size: 4.5rem;
   color: #f9f7f6;
   line-height: 1;
-  overflow: hidden;
-  color: red; }
+  overflow: hidden; }
 
 .heading-2 {
   font-size: 4rem;
