--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -29,6 +29,9 @@
   .heading-1 > span {
     display: block;
   }
+  .heading-3 > span {
+    display: block;
+  }
 
   &__logo {
     height: 3rem;
