--- a/up/css/style.css
+++ b/up/css/style.css
@@ -52,7 +52,8 @@ body {
 .heading-3 {
   font-size: 1.6rem;
   color: #c69963;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  overflow: hidden; }
 
 .heading-4 {
   font-size: 1.9rem; }
@@ -150,6 +151,8 @@ body {
     .header {
       padding: 5rem; } }
   .header .heading-1 > span {
+    display: block; }
+  .header .heading-3 > span {
     display: block; }
   .header__logo {
     height: 3rem;
